monticore-generator/src/test/resources/cocos/valid/ProdExtendsNotExistingProd.mc4
package cocos.valid;

grammar ProdExtendsNotExistingProd {

    interface ISub;

    Super = "A";

    Sup extends Super = "a";

    Sub implements ISub = "b";

}